<resources>
    <string name="app_name">Urgan</string>
    <string name="welcome">Bienvenue !</string>
    <string name="please_connect">Veuillez vous connectez ou créer un nouveau compte pour utiliser l\'application</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="login">Se connecter</string>
    <string name="go_signin">Créer un nouveau compte</string>
    <string name="forgot">Mot de passe oublié</string>
    <string name="please_enter_mail">Veuillez saisir votre email afin de réinitialiser votre mot de passe</string>
    <string name="resend_password">Renvoyer mon mot de passe</string>
    <string name="signin">Inscription</string>
    <string name="please_signin">"Veuillez saisir ces différentes informations, afin que vos listes soient sauvegardées
        "
    </string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="check_password">Vérification du mot de passe</string>
    <string name="do_signin">S\'inscrire</string>
    <string name="close">Fermer</string>
    <string name="whishlist">Whish List</string>
    <string name="likes">Jeux Likés</string>
    <string name="game_logo">Logo du jeu</string>
    <string name="desc">Description</string>
    <string name="reviews">Avis</string>
    <string name="no_like"><![CDATA[Vous n\'avez pas encore liké de contenu.<br/>Cliquez sur le cœur pour en rajouter]]></string>
    <string name="no_wish"><![CDATA[Vous n\'avez pas encore souhaité de contenu.<br/>Cliquez sur l\'étoile pour en rajouter]]></string>
    <string name="search">Rechercher un jeu …</string>
    <string name="game_background">Background du jeu</string>
    <string name="more">En savoir plus</string>
    <string name="price">Prix : %1$s</string>
    <string name="no_connection">Pas de connexion internet</string>
    <string name="disconnected">Déconnecté</string>
    <string name="confirm_logout">Appuyer à nouveau pour vous déconnecter</string>
    <string name="registration_ok">Inscription complété</string>
    <string name="registration_error">Une erreur est survenue</string>
    <string name="connected">Connecté</string>
    <string name="bad_credentials">Les informations renseigné sont incorrecte</string>
    <string name="nb_result">Nombre de résultat : $1%d</string>
    <!-- Strings used for fragments for navigation -->

</resources>