<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/title_layout"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/ext_margin"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textSize="@dimen/title_size"
                android:id="@+id/title"
                android:textStyle="bold"
        />
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/title"
                app:layout_constraintRight_toRightOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:layout_marginTop="@dimen/in_margin"
                android:text="@string/please_enter_mail"
                android:gravity="center"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_layout"
            android:layout_marginTop="@dimen/in_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/input_layout"
    >
        <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:hint="@string/email"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="@dimen/ext_margin"
                android:background="@drawable/input"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:gravity="center"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:hint="@string/password"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="@dimen/ext_margin"
                android:layout_marginTop="@dimen/in_margin"
                android:background="@drawable/input"
                android:gravity="center"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:autofillHints="emailAddress"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.60">
        <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/login"
                android:layout_marginHorizontal="@dimen/ext_margin"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/button_first"
                android:id="@+id/login"
        />
        <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/go_signin"
                android:layout_marginHorizontal="@dimen/ext_margin"
                android:layout_marginTop="@dimen/in_margin"
                app:layout_constraintTop_toBottomOf="@id/login"
                android:background="@drawable/button_second"
                android:id="@+id/signin"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <fr.imacaron.groupe19.urgan.views.UnderLineTextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgot"
            android:text="@string/forgot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/ext_margin"
    />
</androidx.constraintlayout.widget.ConstraintLayout>