<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>

    <include layout="@layout/spinner_loading_item"
        android:id="@+id/spinner_loading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/secondary"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:src="@drawable/back"
                    android:contentDescription="@string/close"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/back"
                    android:layout_marginHorizontal="@dimen/in_margin"
            />
            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/back"
                    android:layout_height="match_parent"
                    android:background="@color/secondary"
                    android:minHeight="?attr/actionBarSize"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp"
                    app:title="Détail du jeu"
            />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:src="@drawable/whishlist"
                    android:contentDescription="@string/whishlist"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    app:layout_constraintRight_toRightOf="parent"
                    android:id="@+id/wishlist"
                    android:layout_marginHorizontal="@dimen/in_margin"
            />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:src="@drawable/like"
                    android:contentDescription="@string/likes"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    app:layout_constraintRight_toLeftOf="@id/wishlist"
                    android:id="@+id/like"
                    android:layout_marginHorizontal="@dimen/in_margin"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/middle"
            android:id="@+id/banner"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
    />
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50"
    />
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/ext_margin"
            android:background="@drawable/rounded"
            android:backgroundTint="@color/secondary"
            android:id="@+id/centralBox"
    >
        <ImageView
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/logo"
                android:contentDescription="@string/game_logo"
                android:id="@+id/logo"
        />
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintLeft_toRightOf="@id/logo"
                android:layout_marginLeft="@dimen/in_margin"
        >
            <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
            />
            <TextView
                    android:id="@+id/editor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintLeft_toLeftOf="parent"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/centralBox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/ext_margin"
    >
        <Button
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/middle2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_first_group_left"
                android:text="@string/desc"
                android:id="@+id/toDesc"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
        />
        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/middle2"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50"
        />
        <Button
                android:id="@+id/toReviews"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/middle2"
                android:background="@drawable/button_second_group_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
        />
        <androidx.fragment.app.FragmentContainerView
                android:id="@+id/descReviews"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/toReviews"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="@dimen/in_margin"
                android:layout_marginTop="@dimen/in_margin"
                android:layout_height="0dp"
                tools:layout="@layout/fragment_detail_desc"
                app:defaultNavHost="true"
                app:navGraph="@navigation/detail_navigation_graph"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>