<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>

    <include layout="@layout/spinner_loading_item"
        android:id="@+id/spinner_loading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >
            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/secondary"
                    android:minHeight="?attr/actionBarSize"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp"
                    app:title="Accueil"
            />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:src="@drawable/whishlist"
                    android:contentDescription="@string/whishlist"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    app:layout_constraintRight_toRightOf="parent"
                    android:id="@+id/wishlist"
                    android:layout_marginHorizontal="@dimen/in_margin"
            />
            <TextView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/badge"
                    app:layout_constraintBottom_toBottomOf="@id/wishlist"
                    app:layout_constraintLeft_toLeftOf="@id/wishlist"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginBottom="27dp"
                    android:id="@+id/wishCount"
            />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:src="@drawable/like"
                    android:contentDescription="@string/likes"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    app:layout_constraintRight_toLeftOf="@id/wishlist"
                    android:id="@+id/like"
                    android:layout_marginHorizontal="@dimen/in_margin"
            />
            <TextView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/badge"
                app:layout_constraintBottom_toBottomOf="@id/like"
                app:layout_constraintLeft_toLeftOf="@id/like"
                android:textSize="11sp"
                android:gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="27dp"
                android:id="@+id/likeCount"
        />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_margin="@dimen/in_margin"
            app:layout_constraintTop_toBottomOf="@id/bar"
            android:hint="@string/search"
            android:background="@drawable/input"
            android:id="@+id/search"
            android:paddingHorizontal="@dimen/input_padding"
            app:drawableEndCompat="@drawable/baseline_search_24"
            android:gravity="center_vertical"
    />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/search"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/list"
            android:layout_marginHorizontal="@dimen/in_margin"
            android:layout_marginTop="@dimen/in_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />


</androidx.constraintlayout.widget.ConstraintLayout>